ci: configure Dependabot for Gradle

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,3 +14,12 @@ updates:
       - 'CI/CD'
     commit-message:
       prefix: 'ci'
+  - package-ecosystem: 'gradle'
+    directory: '/'
+    schedule:
+      interval: 'daily'
+      time: '00:00'
+    labels:
+      - 'CI/CD'
+    commit-message:
+      prefix: 'ci'
