--- a/.editorconfig
+++ b/.editorconfig
@@ -95,7 +95,7 @@ ij_kotlin_line_comment_add_space = true
 ij_kotlin_line_comment_add_space_on_reformat = true
 ij_kotlin_line_comment_at_first_column = false
 ij_kotlin_method_annotation_wrap = split_into_lines
-ij_kotlin_method_call_chain_wrap = normal
+ij_kotlin_method_call_chain_wrap = on_every_item
 ij_kotlin_method_parameters_new_line_after_left_paren = true
 ij_kotlin_method_parameters_right_paren_on_new_line = true
 ij_kotlin_method_parameters_wrap = on_every_item
