--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,5 @@ services:
       - 'POSTGRES_PASSWORD=attacktive'
     ports:
       - '5432:5432'
+    volumes:
+      - "$HOME/containers/postgresql/data:/var/lib/postgresql/data"
