ci: fix detekt rule

--- a/detekt.yml
+++ b/detekt.yml
@@ -5,7 +5,9 @@ config:
 complexity:
   StringLiteralDuplication:
     active: true
-    excludes: '*.gradle*'
+    excludes:
+      - '*.gradle'
+      - '*.gradle.kts'
 
 style:
   UnnecessaryParentheses:
