--- a/detekt.yml
+++ b/detekt.yml
@@ -1,11 +1,13 @@
 config:
   validation: true
   warningsAsErrors: false
-  excludes: '*.gradle,*.gradle.kts'
 
 complexity:
   StringLiteralDuplication:
     active: true
+    excludes:
+      - '**/*.gradle'
+      - '**/*.gradle.kts'
 
 style:
   UnnecessaryParentheses:
